fix: fixes the scrollbar issue

--- a/Code 1/Album Source/src/index.css
+++ b/Code 1/Album Source/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   font-family: 'Cabin Sketch', cursive;
+   scrollbar-width: none;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -10,3 +11,7 @@ body {
 }
 
 
+* {
+     scrollbar-width: none;
+
+}
